# smolDB

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  amalgamate.sh
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  access.h  config.h  executor.cpp  executor.h  main.cpp  recovery_manager.cpp  recovery_manager.h  server.cpp  server.h  smoldb.cpp  smoldb.h  storage.cpp  storage.h
src/backend/access/: CMakeLists.txt  access.cpp  access.h  value.h
src/backend/executor/: CMakeLists.txt  lock_excepts.h  lock_mgr.cpp  lock_mgr.h  trx.h  trx_mgr.cpp  trx_mgr.h  trx_types.h
src/backend/index/: CMakeLists.txt  h_idx.cpp  h_idx.h  idx.h  idx_undo.h
src/backend/proc/: CMakeLists.txt  proc.h  proc_ctx.cpp  proc_ctx.h  proc_mgr.cpp  proc_mgr.h
src/backend/storage/: BufferPool.cpp  CMakeLists.txt  bfrpl.cpp  bfrpl.h  db_hdr_page.h  dsk_mgr.cpp  dsk_mgr.h  heapfile.cpp  heapfile.h  mock_heapfile.h  storage.cpp  storage.h  wal_mgr.cpp  wal_mgr.h
src/protos/: CMakeLists.txt  smoldb.proto
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
tests/integration/: CMakeLists.txt  aries_crash_test.cpp  aries_fuzz_test.cpp  aries_test.cpp  async_dml_test.cpp  concurrency_fuzz_test.cpp  concurrency_fuzz_test.md  concurrency_test.cpp  grpc_test.cpp  h_idx_test.cpp  heap_file_tombstone_test.cpp  table_iterator_test.cpp  test_access.cpp  transaction_test.cpp
tests/integration/app_generic/: throughput_benchmark.cpp  transfer_points_test.cpp
tests/unit/: CMakeLists.txt  aries_crash_test.cpp  aries_fuzz_test.cpp  aries_test.cpp  buffer_evict.cpp  concurrency_fuzz_test.cpp  concurrency_test.cpp  dump_load.cpp  h_idx_test.cpp  heap_file_load_scan.cpp  heap_file_tombstone_test.cpp  heapfile_bitmap_test.cpp  table_iterator_test.cpp  table_row.cpp  test1.cpp  test_access.cpp  transaction_test.cpp  wal-redo.cpp  wal_async_test.cpp
